falta corregir el ejercicio del boton con la funcion

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Asincronia & Axios</title>
 </head>
 <body>
 
-    <h1>Asincronia & Axios</h1>
+    <!-- <h1>Asincronia & Axios</h1> -->
+
+    <div class="container-flex">
+        <div class="text-center">
+          <h1>Asincronia & Axios</h1>
+          <button class="btn" id="show-users">Show Users</button>
+        </div>
+        <hr />
+        <div id="res-div"></div>
+        <div class="msg"></div>
+      </div>
+
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
+    <!-- <script src="solved.js"></script> -->
+
 </body>
 </html>
