--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>Asincronia & Axios</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous"
+/>
+<link rel="stylesheet" href="mai">
+  <title>Asincronia & Axios</title>
 </head>
+
 <body>
 
-    <!-- <h1>Asincronia & Axios</h1> -->
+  <div class="container my-5">
+    <div class="text-center">
+      <h1 class="display-4 text-center mb-3">Asincronia & Axios</h1>
+      <button class="btn btn-primary my-3" id="show-users">Show Users</button>
+    </div>
 
-    <div class="container-flex">
-        <div class="text-center">
-          <h1>Asincronia & Axios</h1>
-          <button class="btn" id="show-users">Show Users</button>
-        </div>
-        <hr />
-        <div id="res-div"></div>
-        <div class="msg"></div>
-      </div>
+    <hr />
+
+    <div id="res-div"></div>
+
+  </div>
 
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js"></script>
-    <!-- <script src="solved.js"></script> -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="main.js"></script>
+
 
 </body>
+
 </html>
